# software_center_proration

./: .gitignore  README.md  pyproject.toml
.github/workflows/: prorate-prices.yml  test.yml
src/proration/: __init__.py  __main__.py  bigcommerce.py  main.py  pricing.py
state/: proration-state.json
tests/: test_bigcommerce.py  test_main.py  test_pricing.py
