[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "software-center-proration"
version = "0.1.0"
description = "Safely reduce BigCommerce product prices on a schedule."
requires-python = ">=3.11"

[project.scripts]
prorate-bigcommerce = "proration.main:main"

[tool.setuptools.packages.find]
where = ["src"]

